--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation project(path: ':minalibrary')
+    //implementation project(path: ':minalibrary')
+
+    implementation 'com.github.MinaSamirCap:MinaLib:0.1.0'
+
+
 }
