--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,23 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+
+# e.g. nisrulz
+#POM_DEVELOPER_ID=[MinaSamirCap]
+
+# e.g. Nishant Srivastava
+#POM_DEVELOPER_NAME=[Mina Samir]
+
+# e.g. youremail@gmail.com
+#POM_DEVELOPER_EMAILID=[MenaSamerCap@gmail.com]
+
+# You can modify the below based on the license you want to use.
+#POM_LICENCE_NAME=The Apache Software License, Version 2.0
+#POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+#POM_ALL_LICENCES='Apache-2.0'
+
+# e.g. com.github.nisrulz
+#GROUP=[com.github.minasamir]
+
+#POM_PACKAGING=aar
